--- a/src/app/component/body/body.component.html
+++ b/src/app/component/body/body.component.html
@@ -7,16 +7,16 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="./assets/Image/IT-people-two.jpg" alt="First slide">
+      <img class="d-block w-100" src="./assets/Image/n5.jpg" alt="First slide" style="height: 750px;">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="./assets/Image/GovGirl1.jpg" alt="Second slide">
+      <img class="d-block w-100" src="./assets/Image/GovGirl1.jpg" alt="Second slide" style="height: 750px;">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="./assets/Image/banner_img1.png" alt="Third slide">
+      <img class="d-block w-100" src="./assets/Image/banner_img1.png" alt="Third slide" style="height: 750px;">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="./assets/Image/Wasp_August_2007-12.jpg" alt="Fourth slide">
+      <img class="d-block w-100" src="./assets/Image/Wasp_August_2007-12.jpg" alt="Fourth slide" style="height: 750px;">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
