--- a/src/app/component/clients/clients.component.html
+++ b/src/app/component/clients/clients.component.html
@@ -1,2 +1,11 @@
-<div class="embed-responsive embed-responsive-16by9">
-  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+<div class="collage">
+    <h2><iframe width="800" height="275"
+      src="https://www.youtube.com/watch?v=iRPPq9vYig4">
+      </iframe></h2>
+    </div>
+    <div class="department">
+        <iframe width="800" height="275"
+        src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1">
+        </iframe>
+    </div>
+    
