Router Link Added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-home></app-home>
+<!-- <app-header></app-header>
+<app-body></app-body>
+<app-clients></app-clients>
+<app-footer></app-footer>  -->
+<router-outlet></router-outlet>
