--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -7,12 +7,12 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home
+          <a class="nav-link" (click)=home()>Home
             <span class="sr-only">(current)</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" (click)=about()>About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Services</a>
@@ -27,3 +27,6 @@
     </div>
   </div>
 </nav>
+
+<router-outlet></router-outlet>
+
